deployments/node-app/argo-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-service
  namespace: argocd
spec:
  type: NodePort 
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80 # Service Port
      targetPort: 8080 # Container Port
      nodePort: 31880
