deployments/node-app/argo-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-service
  namespace: argocd
spec:
  type: NodePort 
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80 # Service Port
      targetPort: 8080 # Container Port
      nodePort: 31880
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argo.showyrskills.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
