deployments/node-app/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end-ingress
  labels:
    name: back-end
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: api.mrstjch.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: back-end-svc
                port:
                  number: 80
