deployments/node-app/fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  labels:
    name: front-end
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: todo.mrstjch.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end-svc
            port: 
              number: 443
